# agimus-hpp

./: CMakeLists.txt  package.xml
doc/: Doxyfile.extra.in  main-page.hh
idl/agimusHpp_idl/: discretization.idl  server.idl
idl/hpp/agimus_idl/: discretization.idl  server.idl
include/hpp/agimus/: discretization.hh
launch/: hpp_interface.launch
scripts/: estimation.py  hpp_node.py
src/: CMakeLists.txt  discretization.cc  discretization.hh  server.cc  server.hh
src/agimus_hpp/: client.py  estimation.py  planning_request_adapter.py  ros_tools.py  tools.py  trajectory_publisher.py
src/agimus_hpp/manipulation/: planning_request_adapter.py
src/agimus_hpp/plugin/: __init__.py  client.py
src/hpp/agimus/: client.py
tests/: connect_and_disconnect.py
